added map to check the counts of view

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                   </tbody>
                </table>
             </div>
-
+            <div class="card border-secondary mb-3">
+               <a href="https://mapmyvisitors.com/web/1c0f4"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff" style="width: 351px;" /></a>
+            </div>
          </div><!--/Left Column-->
 
          <!-- Center Column -->
@@ -328,7 +330,7 @@
             </div>
             <br />
             <h5>UPDATES</h5>
-            <div class="overflow-auto p-3 bg-body-tertiary" style="max-height: 800px;">
+            <div class="overflow-auto p-3 bg-body-tertiary">
                <div class="list-group" style="font-size: 12px;">
                </div>
             </div>
