--- a/publication.html
+++ b/publication.html
@@ -114,7 +114,8 @@
       padding: 0.25rem 0.6rem;
       font-size: 0.75rem;
       font-weight: 600;
-      border-radius: 9999px; /* pill shape */
+      border-radius: 9999px;
+      /* pill shape */
       margin-right: 0.25rem;
     }
 
@@ -125,6 +126,7 @@
     .citations {
       background: #e67e22;
     }
+
     .domains {
       background: #117adb;
     }
@@ -132,6 +134,29 @@
     a {
       text-decoration: none;
     }
+    #filter-bar {
+      display: flex;
+      justify-content: flex-end;   /* pushes contents to the right */
+      align-items: center;
+      gap: 8px;
+      margin: 10px 200px 20px;
+      font-family: sans-serif;
+    }
+
+    #filter-select {
+      padding: 5px 10px;
+      font-size: 14px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      background-color: #fff;
+      cursor: pointer;
+    }
+
+    .filter-label {
+      font-weight: 500;
+      color: #333;
+    }
+
   </style>
   <script src="scripts/navbar.js"></script>
   <script src="scripts/googlescholar.js"></script>
@@ -211,6 +236,22 @@
         <div id="main">
           <div id="cpaper">
             <div class="contentText">
+              <div id="filter-bar">
+                <label for="filter-select">Sort articles:</label>
+                <select id="filter-select">
+                  <option value="none" selected>-- Select filter --</option>
+                  <option value="year">By Year (Newest First)</option>
+                  <option value="cited">By Citations (Most Cited First)</option>
+                </select>
+              </div>
+
+              <div id="main">
+                <div id="cpaper">
+                  <div class="contentText">
+                    <div id="articles-container"></div>
+                  </div>
+                </div>
+              </div>
               <div id="articles-container"></div>
             </div>
           </div>
