--- a/index.html
+++ b/index.html
@@ -160,25 +160,29 @@
                   <p class="card-text">“By far, the greatest danger of Artificial Intelligence is that people conclude
                      too early that they understand it." – Eliezer Yudkowsky</p>
                </div> -->
-               <div>
-                  <!-- Search bar -->
-                  <!-- <input type="text" id="pubSearch" placeholder="🔍 Search publications..."> -->
-               </div>
-               <table class="table table-sm" id="conference-table">
-                  <thead>
-                     <tr>
-                        <th scope="col">Conference</th>
-                        <th scope="col">Cycle</th>
-                        <th scope="col">Submission Deadline</th>
-                        <th scope="col">Location</th>
-                     </tr>
-                  </thead>
-                  <tbody id="conference-table-body">
-                  </tbody>
-               </table>
+                  <div class="table-responsive">
+                     <table class="table table-sm table-hover table-striped" id="conference-table">
+                        <thead class="thead-light">
+                           <tr>
+                           <th scope="col">Conference</th>
+                           <th scope="col">Cycle</th>
+                           <th scope="col">Submission Deadline</th>
+                           <th scope="col">Location</th>
+                           </tr>
+                        </thead>
+                        <tbody id="conference-table-body"></tbody>
+                     </table>
+                  </div>
             </div>
-            <div class="card border-secondary mb-3">
-               <a href="https://mapmyvisitors.com/web/1c0f4"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff" style="width: 351px;" /></a>
+            <div class="card border-secondary mb-3 text-center">
+               <a href="https://mapmyvisitors.com/web/1c0f4" title="Visit tracker">
+                  <img 
+                     src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff"
+                     alt="Visit tracker map"
+                     class="img-fluid rounded"
+                     style="max-width: 100%; height: auto;"
+                  />
+               </a>
             </div>
          </div><!--/Left Column-->
 
