--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
                      </table>
                   </div>
             </div>
-            <div class="card border-secondary mb-3 text-center">
+            <div class="card border-secondary mb-3">
                <a href="https://mapmyvisitors.com/web/1c0f4" title="Visit tracker">
                   <img 
                      src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff"
                      alt="Visit tracker map"
-                     class="img-fluid rounded"
-                     style="max-width: 100%; height: auto;"
+                     class="card-img-top img-fluid"
                   />
                </a>
             </div>
+
          </div><!--/Left Column-->
 
          <!-- Center Column -->
