added new table to show domain wise contribution

--- a/publication.html
+++ b/publication.html
@@ -164,6 +164,7 @@
     #domain-frequency-table table {
       width: 100%;
       border-collapse: collapse;
+      background-color: #ffff !important;
     }
 
     #domain-frequency-table th, #domain-frequency-table td {
@@ -172,10 +173,9 @@
       font-size: 14px;
     }
 
-    #domain-frequency-table tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
+    /* #domain-frequency-table tr:nth-child(even) {
+      background-color: #ffff;
+    } */
 
   </style>
   <script src="scripts/navbar.js"></script>
@@ -229,9 +229,6 @@
               <a class="icons-row" href="https://github.com/ismail102"><i class="bi bi-github"></i></a>
               <a class="icons-row" href="https://www.researchgate.net/profile/Ismail-Hossain-50"><i
                   class="fa fa-researchgate" aria-hidden="true"></i></a>
-              <!--<li><a href="https://dblp.org/pid/203/0239.html"><i class="fas fa-fw fa-graduation-cap"></i> DBLP</a></li> -->
-              <!--<li><a href="https://twitter.com/IsmailHMukul"><i class="fab fa-fw fa-twitter-square"
-                             aria-hidden="true"></i> Twitter</a></li>-->
               <a class="icons-row" href="https://www.linkedin.com/in/ismail-hossain-90771716a/"><i
                   class="bi bi-linkedin"></i></a>
             </div>
@@ -250,10 +247,6 @@
       <!-- Center Column -->
       <div class="col">
         <!-- Alert -->
-        <!-- <div class="alert alert-success alert-dismissible" role="alert">
-          <h2>Publications</h2>
-        </div> -->
-
 
         <div id="main">
           <div id="cpaper">
