updated profile info in website

--- a/achievements.html
+++ b/achievements.html
@@ -54,6 +54,9 @@
          align-items: center;
       }
    </style>
+   <link rel="stylesheet" href="style/profile.css">
+
+   <script src="scripts/profile.js"></script>
    <script src="scripts/navbar.js"></script>
 </head>
 
@@ -76,43 +79,7 @@
          <!-- Left Column -->
          <div class="col-md-3">
 
-            <div class="card">
-               <img src="images/profile2.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
-                  alt="Cinque Terre">
-               <!-- <img src="images/profile2.jpg" class="card-img-top" alt="..."> -->
-               <div class="card-body">
-                  <h5 class="card-title" style="text-align: center;">Ismail Hossain</h5>
-                  <div class="card-text" style="text-align: center;">
-                     <b>Ph.D Student</b>
-                     <br><b>Researcher Assistant</b>, <a
-                        href="https://www.cs.utep.edu/stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and
-                        <b>Pr</b>ivacy <b>E</b>nhanced <b>M</b>achine L<b>e</b>arning (SUPREME) Lab</a>
-                     <!-- <br>Engineering A321, School of Computing
-                         <br>Southern Illinois University
-                         <br><i class="fa fa-phone" aria-hidden="true"></i> (773) 355-9699 -->
-                     <br>
-                     <br><i class="fa fa-envelope" aria-hidden="true"></i> <a
-                        href="https://www2.cs.siu.edu/~stalukder/mailto:ihossain@miners.utep.edu">ihossain@miners.utep.edu</a>
-                     <br><i class="fa fa-file" aria-hidden="true"></i> <a href="CV_Ismail_Hossain.pdf">Curriculum
-                        Vitae</a>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-sm-12 text-center">
-                     <a href="https://scholar.google.com/citations?user=FexryyIAAAAJ&hl=en"><i
-                           class="fa fa-graduation-cap"></i></a>
-                     <!--<li><a href="#"><i class="fab fa-fw fa-orcid"></i> ORCID</a></li>-->
-                     <a class="icons-row" href="https://github.com/ismail102"><i class="bi bi-github"></i></a>
-                     <a class="icons-row" href="https://www.researchgate.net/profile/Ismail-Hossain-50"><i
-                           class="fa fa-researchgate" aria-hidden="true"></i></a>
-                     <!--<li><a href="https://dblp.org/pid/203/0239.html"><i class="fas fa-fw fa-graduation-cap"></i> DBLP</a></li> -->
-                     <!--<li><a href="https://twitter.com/IsmailHMukul"><i class="fab fa-fw fa-twitter-square"
-                                     aria-hidden="true"></i> Twitter</a></li>-->
-                     <a class="icons-row" href="https://www.linkedin.com/in/ismail-hossain-90771716a/"><i
-                           class="bi bi-linkedin"></i></a>
-                  </div>
-               </div>
-            </div>
+            <div id="profileCard"></div>
             <br />
             <div class="card border-success mb-3">
                <div class="card-header">
