about section updated

--- a/about.html
+++ b/about.html
@@ -96,34 +96,27 @@
 
             <!-- Articles -->
             <div class="bio">
-               I am enrolled in a Ph.D. program in computer science at the University of Texas at El Paso.
-               My educational background includes a B.Sc. degree in Computer Science and Engineering from Chittagong
-               University of Engineering and Technology (CUET).
-               I have been working as a researcher at the SUPREME Lab since Fall'22 under the guidance of Professor
-               Dr. Sajedul Talukder.
-               My primary research focus revolves around areas such as Large Language Model (LLM), Federated Learning, Machine Learning, Deep
-               Learning, Natural Language Processing (NLP),
-               and Social Networks. Previously, I worked as a senior software engineer at Samsung R&D Institute
-               Bangladesh,
-               where I made valuable contributions to a collaborative project with Samsung Network Division.
-               Specifically,
-               I focused on the development of web-based tools catering to the needs of 4G and 5G developers.
-               Alongside my professional endeavors,
-               I have actively participated in competitive programming on platforms such as Leetcode, Codeforces,
-               Uva, LightOj, Spoj, and Hackerrank,
-               achieving noteworthy success. Throughout my tenure at Samsung, I consistently demonstrated exceptional
-               performance by securing prizes
-               and earning advanced level certificates in the monthly contests organized by Samsung R&D. My technical
-               expertise encompasses both
-               front-end and back-end development, with responsibilities ranging from requirements analysis to
-               software module design, development,
-               testing, and server deployment. Moreover, I actively engaged in knowledge-sharing activities during my
-               time at Samsung, conducting
-               sessions on topics such as software engineering principles, emerging technologies, and best practices
-               for clean coding. My performance
-               at Samsung led to my selection as a distinguished candidate among many others at Samsung, resulting in
-               an opportunity to collaborate
-               with the Suwon team on diverse projects at Samsung Digital City in Suwon, Korea.
+               I am a PhD student in Computer Science at the University of Texas at El Paso, specializing in Large Language Models (LLMs), multimodal learning, efficient deep-learning architectures, and scalable model training pipelines. My research spans transformer optimization, robustness, alignment, self-supervised learning, active learning, and real-world AI deployment, with multiple publications across major venues including PoPETs, AAAI (ICWSM), HyperText, and ASONAM.
+
+               I currently work as a Research Assistant in the SUPREME Lab, where I build and evaluate LLMs, develop distributed training workflows (FSDP), design multimodal architectures, and explore techniques such as PEFT/LoRA, RAG, generative modeling, and behavior modeling. My work focuses on creating reliable, efficient, and trustworthy AI systems.
+
+               Previously, I spent three years as a Software Engineer at Samsung R&D, delivering large-scale software systems, collaborating across global teams, and contributing 800+ commits and 300+ code reviews. I received Samsung’s Outstanding Collaborator Award and was selected for a technical trip to South Korea for technology transfer.
+
+               Across academia and industry, I bring a blend of research depth and engineering discipline, with a strong foundation in Python, C++, PyTorch, data pipelines, and large-scale ML development. I enjoy solving challenging problems, working on frontier-model research, and building AI systems that make a real impact.
+
+               I am passionate about:
+
+               Large Language Models (LLMs), multimodal & foundation models
+
+               Scalable deep learning systems & distributed training
+
+               Generative AI, retrieval-augmented systems, and evaluation science
+
+               Safety, robustness, and trustworthy AI
+
+               Applying AI to socially meaningful domains like healthcare, security, and autonomy
+
+               I’m always open to connecting with researchers, engineers, and collaborators working in AI, ML, NLP, LLMs, foundation models, and applied research.
             </div>
             <hr>
             <h4><i class="bi bi-briefcase-fill me-2"></i>Professional Experience</h4>
