--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
                  Bio
                </div> -->
                <div class="card-body">
-                  <p class="card-text">I am a Ph.D. candidate in Computer Science at the University of Texas at El Paso (UTEP), specializing in Large Language Models (LLMs), Machine Learning, Deep Learning, Federated Learning, and Natural Language Processing (NLP) under the supervision of Dr. Sajedul Talukder at the SUPREME Lab.
-                     My research integrates AI safety, privacy, and distributed intelligence, contributing to peer-reviewed publications across leading venues such as PoPETs, ACM, Springer, and IEEE.
-                     Previously, I served as a Senior Software Engineer at Samsung R&D Institute Bangladesh, where I developed full-stack web tools for 4G/5G network developers in collaboration with Samsung Network Division, Suwon (Korea). I was recognized with multiple performance awards and selected for an international collaboration visit to Samsung Digital City, Korea.
-                     With strong foundations in full-stack development, applied AI, and competitive programming (LeetCode, Codeforces, UVA, LightOJ), I bring a balanced blend of research innovation and engineering precision. I am passionate about building scalable, trustworthy AI systems and mentoring peers in software engineering and clean-code practices.
+                  <p class="card-text">I am a PhD student in Computer Science at the University of Texas at El Paso, specializing in Large Language Models (LLMs), multimodal learning, efficient deep-learning architectures, and scalable model training pipelines. My research spans transformer optimization, robustness, alignment, self-supervised learning, active learning, and real-world AI deployment, with multiple publications across major venues including CIKM, PoPETs, AAAI (ICWSM), HyperText, and ASONAM.
+                  I currently work as a Research Assistant in the SUPREME Lab, where I build and evaluate LLMs, develop distributed training workflows (FSDP), design multimodal architectures, and explore techniques such as PEFT/LoRA, RAG, generative modeling, and behavior modeling. My work focuses on creating reliable, efficient, and trustworthy AI systems.
                   </p>
                </div>
             </div>
