--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -49,9 +50,10 @@
    <script src="scripts/conferences.js"></script>
    <script src="scripts/updates.js"></script>
    <script src="scripts/googlescholar.js"></script>
-   
+   <script src="scripts/presentation.js"></script>
 
-     <!-- <style>
+
+   <!-- <style>
       body { font-family: Arial, sans-serif; margin: 20px; }
       table { border-collapse: collapse; margin-bottom: 20px; }
       table, th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
@@ -78,7 +80,7 @@
 
    <div class="container-fluid">
       <div class="row">
-         
+
          <!-- Left Column -->
          <div class="col-md-3">
             <div id="profileCard"></div>
@@ -92,27 +94,24 @@
                   <p class="card-text">“By far, the greatest danger of Artificial Intelligence is that people conclude
                      too early that they understand it." – Eliezer Yudkowsky</p>
                </div> -->
-                  <div class="table-responsive">
-                     <table class="table table-sm table-hover table-striped" id="conference-table">
-                        <thead class="thead-light">
-                           <tr>
+               <div class="table-responsive">
+                  <table class="table table-sm table-hover table-striped" id="conference-table">
+                     <thead class="thead-light">
+                        <tr>
                            <th scope="col">Conference</th>
                            <th scope="col">Cycle</th>
                            <th scope="col">Submission Deadline</th>
                            <th scope="col">Location</th>
-                           </tr>
-                        </thead>
-                        <tbody id="conference-table-body"></tbody>
-                     </table>
-                  </div>
+                        </tr>
+                     </thead>
+                     <tbody id="conference-table-body"></tbody>
+                  </table>
+               </div>
             </div>
             <div class="card border-secondary mb-3">
                <a href="https://mapmyvisitors.com/web/1c0f4" title="Visit tracker">
-                  <img 
-                     src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff"
-                     alt="Visit tracker map"
-                     class="card-img-top img-fluid"
-                  />
+                  <img src="https://mapmyvisitors.com/map.png?d=4sb0Y8DDfKWs4zS2F4Ive3cPdnozRg9xyVmJ4LNUXI0&cl=ffffff"
+                     alt="Visit tracker map" class="card-img-top img-fluid" />
                </a>
             </div>
 
@@ -125,19 +124,27 @@
                  Bio
                </div> -->
                <div class="card-body">
-                  <p class="card-text">I am a PhD student in Computer Science at the University of Texas at El Paso, specializing in Large Language Models (LLMs), multimodal learning, efficient deep-learning architectures, and scalable model training pipelines. My research spans transformer optimization, robustness, alignment, self-supervised learning, active learning, and real-world AI deployment, with multiple publications across major venues including CIKM, PoPETs, AAAI (ICWSM), HyperText, and ASONAM.
-                  I currently work as a Research Assistant in the SUPREME Lab, where I build and evaluate LLMs, develop distributed training workflows (FSDP), design multimodal architectures, and explore techniques such as PEFT/LoRA, RAG, generative modeling, and behavior modeling. My work focuses on creating reliable, efficient, and trustworthy AI systems.
+                  <p class="card-text">I am a PhD student in Computer Science at the University of Texas at El Paso,
+                     specializing in Large Language Models (LLMs), multimodal learning, efficient deep-learning
+                     architectures, and scalable model training pipelines. My research spans transformer optimization,
+                     robustness, alignment, self-supervised learning, active learning, and real-world AI deployment,
+                     with multiple publications across major venues including CIKM, PoPETs, AAAI (ICWSM), HyperText, and
+                     ASONAM.
+                     I currently work as a Research Assistant in the SUPREME Lab, where I build and evaluate LLMs,
+                     develop distributed training workflows (FSDP), design multimodal architectures, and explore
+                     techniques such as PEFT/LoRA, RAG, generative modeling, and behavior modeling. My work focuses on
+                     creating reliable, efficient, and trustworthy AI systems.
                   </p>
                </div>
             </div>
             <section id="research-interests">
-                  <h5><i class="bi bi-lightbulb-fill"></i>Current Research Interest</h5>
-                  <ul>
-                     <li>Trustworthy &amp; Privacy-Preserving AI</li>
-                     <li>Large Language Models (LLMs) &amp; Multimodal Intelligence</li>
-                     <li>Deep Learning for Cybersecurity &amp; Social Network Analysis</li>
-                     <li>Federated &amp; Edge Machine Learning Systems</li>
-                  </ul>
+               <h5><i class="bi bi-lightbulb-fill"></i>Current Research Interest</h5>
+               <ul>
+                  <li>Trustworthy &amp; Privacy-Preserving AI</li>
+                  <li>Large Language Models (LLMs) &amp; Multimodal Intelligence</li>
+                  <li>Deep Learning for Cybersecurity &amp; Social Network Analysis</li>
+                  <li>Federated &amp; Edge Machine Learning Systems</li>
+               </ul>
             </section>
             <br />
             <!-- <div class="card">
@@ -155,24 +162,27 @@
                <h4><i class="bi bi-journal-bookmark-fill me-2"></i>Publications at a Glance
                </h4>
                <div id="loader" class="loader">
-               <div class="spinner"></div>
+                  <div class="spinner"></div>
                   <p>Loading data...</p>
                </div>
 
-              <div style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
-                  <div style="width:110px; text-align:center; background:#eef6ff; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
+               <div style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
+                  <div
+                     style="width:110px; text-align:center; background:#eef6ff; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
                      <i class="fas fa-book-open" style="font-size:14px; color:#007bff;"></i>
                      <h3 id="citations-all" style="margin:8px 0 0; font-size:12px;">0</h3>
                      <p style="margin:3px 0 0; font-size:12px; color:#555;">Citations</p>
                   </div>
 
-                  <div style="width:110px; text-align:center; background:#e8f8f5; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
+                  <div
+                     style="width:110px; text-align:center; background:#e8f8f5; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
                      <i class="fas fa-chart-line" style="font-size:14px; color:#28a745;"></i>
                      <h3 id="hindex-all" style="margin:8px 0 0; font-size:12px;">0</h3>
                      <p style="margin:3px 0 0; font-size:12px; color:#555;">h-index</p>
                   </div>
 
-                  <div style="width:110px; text-align:center; background:#fff5e6; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
+                  <div
+                     style="width:110px; text-align:center; background:#fff5e6; padding:12px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);">
                      <i class="fas fa-graduation-cap" style="font-size:14px; color:#ff8800;"></i>
                      <h3 id="i10-all" style="margin:8px 0 0; font-size:12px;">0</h3>
                      <p style="margin:3px 0 0; font-size:12px; color:#555;">i10-index</p>
@@ -189,7 +199,7 @@
                   <span id="pubCount">Here, I have total 0 research articles.</span>
                </div>
                <div id="pubContainer"></div>
-               
+
             </div>
             <hr>
             <h5>Research Domain Interests</h5>
@@ -253,6 +263,44 @@
                </li>
             </ul>
             <hr>
+
+            <div class="container my-4">
+               <h5 class="fw-semibold mb-3">
+               <i class="bi bi-mortarboard-fill me-2 text-primary"></i>
+               PhD Dissertation Proposal Presentation
+               </h5>
+
+               <div class="row justify-content-center">
+                  <div class="col-lg-10 col-md-12 text-center">
+
+                     <!-- Slideshow Image -->
+                     <img id="slideshow-img" class="img-fluid rounded shadow" style="height:50vh; object-fit:contain;" alt="Presentation Slides" />
+
+                     <!-- Controls -->
+                     <div class="d-flex justify-content-center align-items-center gap-2 mt-3 flex-wrap">
+                        <button id="btn-prev" class="btn btn-outline-secondary">
+                           ◀ Prev
+                        </button>
+
+                        <button id="btn-play" class="btn btn-success">
+                           ▶ Play
+                        </button>
+
+                        <button id="btn-pause" class="btn btn-warning">
+                           ⏸ Pause
+                        </button>
+
+                        <button id="btn-next" class="btn btn-outline-secondary">
+                           Next ▶
+                        </button>
+
+                        <span id="slide-indicator" class="badge bg-light ms-2"></span>
+                     </div>
+
+                  </div>
+               </div>
+            </div>
+
          </div>
          <div class="col-md-3 col-xs-8">
             <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
