--- a/gallery.html
+++ b/gallery.html
@@ -48,6 +48,28 @@
         .text-color {
             color: rgb(255, 255, 255);
         }
+
+        .box {
+            max-width: 500px;
+            margin: auto;
+            background: white;
+            padding: 24px;
+            border-radius: 12px;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+        }
+        a.download {
+            display: block;
+            margin: 12px 0;
+            padding: 12px;
+            text-decoration: none;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            color: #000;
+            font-weight: 500;
+        }
+        a.download:hover {
+            background: #f1f3f5;
+        }
     </style>
     <link rel="stylesheet" href="style/profile.css">
 
@@ -141,7 +163,22 @@
                 <!-- Gallery -->
             </div>
             <div class="col-md-3 col-xs-5">
+                 <div class="box">
+                    <h2>Download Files</h2>
 
+                    <!-- GitHub Pages resources directory -->
+                    <a class="download" href="resources/ai-in-the-loop-poster.pdf" download>
+                    📄AI-in-the-Loop Poster Presentation
+                    </a>
+
+                    <a class="download" href="resources/icwsm-conference-poster.jpg" download>
+                    🗜️ ICWSM Conference Poster Presentation 
+                    </a>
+
+                    <a class="download" href="resources/qualifier-presentation-2025.pdf" download>
+                    🖼️ PhD Qualifier Presentation
+                    </a>
+                </div>
             </div>
         </div>
 
